<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>uk.ac.ox.cs.pdq</groupId>
	<artifactId>pdq-datasources</artifactId>
	<version>1.0.0-Beta</version>
	<name>PDQ data sources library</name>
	<url>http://www.cs.ox.ac.uk/pdq/</url>
	<description>This library features packages and classes PDQ's interface to specific data source (RDBMS, Web services, etc).</description>
	<build>
		<sourceDirectory>main/src</sourceDirectory>
		<testSourceDirectory>test/src</testSourceDirectory>
		<resources>
			<resource>
				<directory>main/src</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
			<resource>
				<directory>main/src/resources</directory>
				<filtering>true</filtering>
				<includes>
					<include>**/*</include>
				</includes>
			</resource>
			<resource>
				<directory>main/src/resources</directory>
				<filtering>false</filtering>
				<excludes>
					<exclude>**/*</exclude>
				</excludes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<source>11</source>
					<target>11</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<organization>
		<name>Oxford University - Department of Computer Science</name>
		<url>http://www.cs.ox.ac.uk/</url>
	</organization>
	<dependencies>
 		<dependency>
        	<groupId>uk.ac.ox.cs.pdq</groupId>
        	<artifactId>pdq-common</artifactId>
        	<type>test-jar</type>
        	<version>1.0.0-Beta</version>
    	    <scope>test</scope>
	    </dependency>		
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>5.1.30</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>9.3-1102-jdbc41</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.jcs</groupId>
			<artifactId>jcs</artifactId>
			<version>1.3</version>
		</dependency>
		<dependency>
			<groupId>javax.ws.rs</groupId>
			<artifactId>javax.ws.rs-api</artifactId>
			<version>2.0</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.2.3</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.jaxrs</groupId>
			<artifactId>jackson-jaxrs-json-provider</artifactId>
			<version>2.2.3</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.dataformat</groupId>
			<artifactId>jackson-dataformat-xml</artifactId>
			<version>2.2.3</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.core</groupId>
			<artifactId>jersey-client</artifactId>
			<version>2.11</version>
		</dependency>
		<dependency>
			<groupId>uk.ac.ox.cs.pdq</groupId>
			<artifactId>pdq-common</artifactId>
		</dependency>
	</dependencies>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>uk.ac.ox.cs.pdq</groupId>
				<artifactId>pdq-common</artifactId>
				<version>1.0.0-Beta</version>
			</dependency>
		<dependency>
			<groupId>javax.annotation</groupId>
			<artifactId>javax.annotation-api</artifactId>
			<version>1.3.2</version>
		</dependency>
		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
			<version>2.4.0-b180725.0427</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>jaxb-runtime</artifactId>
			<version>2.4.0-b180725.0644</version>
		</dependency>
			
		</dependencies>
	</dependencyManagement>
	<packaging>jar</packaging>
</project>
